Remove all Java 9+ features for compatibility with z/OS Explorer